fix:benchmarktest fix.
Signed-off-by: dong-peng25 <dongpeng25@huawei.com>

--- a/tests/sdk/transmission/benchmarktest/BUILD.gn
+++ b/tests/sdk/transmission/benchmarktest/BUILD.gn
@@ -28,10 +28,14 @@ ohos_benchmarktest("TransTest") {
     "//commonlibrary/c_utils/base/include",
     "//third_party/bounds_checking_function/include",
     "$dsoftbus_root_path/sdk/discovery/manager/include",
+    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
+    "//base/security/access_token/interfaces/innerkits/nativetoken/include",
+    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
   ]
 
   deps = [
     "$dsoftbus_root_path/sdk:softbus_client",
+    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
     "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
     "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
     "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
