--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -30,6 +30,7 @@ bus_center_hub_inc = [
   "$core_lane_hub_path/time_sync/include",
   "$core_lane_hub_path/heartbeat/include",
   "$core_lane_hub_path/lane_qos/include",
+  "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
 ]
 bus_center_hub_deps = []
 
