fix Build.gn formate
Signed-off-by: Huge_Dream <534463586@qq.com>
Change-Id: I572ad0ef102227f19251e29eb4ab9cfe8af48f21

--- a/components/nstackx/nstackx_congestion/BUILD.gn
+++ b/components/nstackx/nstackx_congestion/BUILD.gn
@@ -11,9 +11,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+DSOFTBUS_ROOT_PATH = "./../../.."
+import("$DSOFTBUS_ROOT_PATH/dsoftbus.gni")
 
-NSTACKX_ROOT = "//foundation/communication/dsoftbus/components/nstackx"
+NSTACKX_ROOT = "$DSOFTBUS_ROOT_PATH/components/nstackx"
 
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
