--- a/components/nstackx/nstackx_ctrl/BUILD.gn
+++ b/components/nstackx/nstackx_ctrl/BUILD.gn
@@ -11,7 +11,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+DSOFTBUS_ROOT_PATH = "./../../.."
+import("$DSOFTBUS_ROOT_PATH/dsoftbus.gni")
 
 cflags = [
   "-DENABLE_USER_LOG",
