--- a/tests/adapter/unittest/BUILD.gn
+++ b/tests/adapter/unittest/BUILD.gn
@@ -276,6 +276,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/adapter/common/net/wifi/common",
       "//foundation/communication/wifi/wifi/frameworks/native/interfaces",
       "//foundation/communication/wifi/wifi/interfaces/kits/c",
+      "//foundation/communication/wifi/wifi/interfaces/inner_api",
       "//foundation/communication/wifi/wifi/frameworks/native/include",
       "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
       "//foundation/communication/wifi/wifi/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
