--- a/core/connection/ble/conn_ble.gni
+++ b/core/connection/ble/conn_ble.gni
@@ -15,9 +15,18 @@ import(
     "//foundation/communication/dsoftbus/adapter/common/net/bluetooth/net_bluetooth.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
+native_source_path = rebase_path("$dsoftbus_root_path")
+conn_ble_dir = "dsoftbus_enhance/core/connection/ble/src"
+enhanced_conn_ble = exec_script("$dsoftbus_root_path/check_sub_module.py",
+                                [
+                                  "$native_source_path",
+                                  "$conn_ble_dir",
+                                ],
+                                "value")
 ble_connection_deps = []
 if (dsoftbus_feature_conn_ble == false) {
   ble_connection_src = [ "$dsoftbus_root_path/core/connection/ble/src/softbus_ble_connection_virtual.c" ]
+  ble_connection_src += [ "$dsoftbus_root_path/core/connection/ble/src/softbus_ble_conn_direct_virtual.c" ]
   ble_connection_inc = [
     "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
     "$dsoftbus_root_path/core/connection/ble/include",
@@ -41,6 +50,11 @@ if (dsoftbus_feature_conn_ble == false) {
     "$dsoftbus_root_path/core/connection/ble/src",
     "$dsoftbus_root_path/core/common/include",
   ]
+  if (enhanced_conn_ble == true) {
+    ble_connection_src += [ "$dsoftbus_root_path/dsoftbus_enhance/core/connection/ble/src/softbus_conn_ble_direct_conn.c" ]
+  } else {
+    ble_connection_src += [ "$dsoftbus_root_path/core/connection/ble/src/softbus_ble_conn_direct_virtual.c" ]
+  }
   ble_connection_src += adapter_ble_src
   ble_connection_inc += adapter_ble_inc
   ble_connection_deps += adapter_ble_deps
