--- a/sdk/transmission/session/trans_session_sdk.gni
+++ b/sdk/transmission/session/trans_session_sdk.gni
@@ -13,6 +13,7 @@
 
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
+native_source_path = rebase_path("$dsoftbus_root_path")
 trans_session_sdk_src = [
   "$dsoftbus_sdk_path/transmission/session/src/client_trans_session_callback.c",
   "$dsoftbus_sdk_path/transmission/session/src/client_trans_session_manager.c",
@@ -41,9 +42,28 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/sdk/transmission/session/cpp/src/session_mock.cpp",
     "$dsoftbus_root_path/sdk/transmission/session/cpp/src/session_service_impl.cpp",
   ]
+
+  broadcast_dep_dir =
+      "dsoftbus_enhance/core/transmission/trans_channel/ble_broadcast"
+  enhanced_broadcast = exec_script("$dsoftbus_root_path/check_sub_module.py",
+                                   [
+                                     "$native_source_path",
+                                     "$broadcast_dep_dir",
+                                   ],
+                                   "value")
+  if (enhanced_broadcast) {
+    import(
+        "$dsoftbus_root_path/dsoftbus_enhance/sdk/transmission/trans_channel/ble_broadcast/broadcast_sdk.gni")
+
+    trans_session_sdk_src += broadcast_sources
+    trans_session_sdk_inc += broadcast_include_dirs
+  } else {
+    trans_session_sdk_inc +=
+        [ "$dsoftbus_root_path/core/transmission/broadcast/include" ]
+    trans_session_sdk_src += [ "$dsoftbus_root_path/core/transmission/broadcast/src/trans_spec_object_proxy.cpp" ]
+  }
 }
 
-native_source_path = rebase_path("$dsoftbus_root_path")
 dep_schema = "dsoftbus_enhance/sdk/transmission/session/src"
 schema_enhanced = exec_script("$dsoftbus_root_path/check_sub_module.py",
                               [
