add innertag on communication_dsoftbus
Signed-off-by: chengjinsong2 <chengjinsong2@huawei.com>

--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -209,6 +209,7 @@ if (defined(ohos_lite)) {
         "hiviewdfx_hilog_native:libhilog",
       ]
     }
+    innerapi_tags = [ "platformsdk_indirect" ]
     part_name = "dsoftbus"
     subsystem_name = "communication"
   }
