--- a/components/nstackx/fillp/BUILD.gn
+++ b/components/nstackx/fillp/BUILD.gn
@@ -122,6 +122,7 @@ if (defined(ohos_lite)) {
       "//third_party/bounds_checking_function:libsec_shared",
     ]
 
+    innerapi_tags = [ "platformsdk_indirect" ]
     part_name = "dsoftbus"
     subsystem_name = "communication"
   }
