--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -70,6 +70,7 @@ target(build_type, "softbus_client") {
   deps = common_client_deps
   all_dependent_configs = [ ":dsoftbus_sdk_interface" ]
   defines = TRANS_SDK_DEFINES
+  innerapi_tags = [ "platformsdk_indirect" ]
 
   if (defined(ohos_lite)) {
     cflags_cc = [ "-stdc=c++14" ]
