--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -8,7 +8,7 @@
     ],
     "services" : [{
             "name" : "softbus_server",
-            "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.xml"],
+            "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.json"],
             "uid" : "dsoftbus",
             "gid" : ["dsoftbus", "system", "shell"],
             "secon" : "u:r:softbus_server:s0",
