--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -8,7 +8,7 @@
     ],
     "services" : [{
             "name" : "softbus_server",
-            "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.xml"],
+            "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.json"],
             "uid" : "dsoftbus",
             "gid" : ["dsoftbus", "system", "shell"],
             "permission" : ["ohos.permission.PERMISSION_USED_STATS", "ohos.permission.GET_SENSITIVE_PERMISSIONS"],
