--- a/core/connection/conn.gni
+++ b/core/connection/conn.gni
@@ -22,8 +22,8 @@ conn_manager_src = ble_connection_src + br_connection_src + tcp_connection_src +
                    p2p_connection_src
 conn_manager_inc = ble_connection_inc + br_connection_inc + tcp_connection_inc +
                    p2p_connection_inc
-conn_manager_deps =
-    ble_connection_deps + br_connection_deps + p2p_connection_deps
+conn_manager_deps = ble_connection_deps + br_connection_deps
+conn_manager_external_deps = p2p_connection_external_deps
 conn_manager_src +=
     [ "$dsoftbus_root_path/core/connection/manager/softbus_conn_manager.c" ]
 conn_manager_inc += [
