--- a/core/frame/standard/sa_profile/BUILD.gn
+++ b/core/frame/standard/sa_profile/BUILD.gn
@@ -14,7 +14,7 @@
 import("//build/ohos/sa_profile/sa_profile.gni")
 
 ohos_sa_profile("softbus_sa_profile") {
-  sources = [ "softbus_server.json" ]
+  sources = [ "4700.json" ]
 
   part_name = "dsoftbus"
 }
